fix font style on IOS

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -4,7 +4,7 @@
   src: url("./SegoeUI-SemilightItalic_gdi.eot?#iefix") format("embedded-opentype"), url("./SegoeUI-SemilightItalic_gdi.woff") format("woff"), url("./SegoeUI-SemilightItalic_gdi.ttf") format("truetype"), url("./SegoeUI-SemilightItalic_gdi.svg#SegoeUI-SemilightItalic") format("svg");
   font-weight: 350;
   font-style: italic;
-  font-stretch: normal;
+  font-stretch: bold;
   unicode-range: U+000D-FFFD;
 }
 
